# fhir-data-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
airflow/dags/: fhir_etl_dag.py
docs/: architecture.md  deployment.md  message-schema.json  security.md  setup.md  troubleshooting.md
etl/: Dockerfile  __init__.py  kafka_consumer.py  kafka_producer.py  requirements.txt
etl/lib/: __init__.py  config.py  dlq.py  fhir.py  logging_setup.py  metrics.py  redaction.py  transform.py
hapi/: application.yaml
observability/: prometheus.yml
observability/grafana/dashboards/: fhir-consumer.json
observability/grafana/provisioning/dashboards/: dashboards.yml
postgres/: init-airflow.sql  init-db.sh
tests/: conftest.py  test_config.py  test_consumer_logging.py  test_consumer_parse.py  test_dlq.py  test_fhir_builders.py  test_fhir_client.py  test_redaction.py  test_transform.py
tests/integration/: test_pipeline.py
